src/objects/Suspension_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number_Text__c</fullName>
        <label>ADCVD Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Number__c</fullName>
        <formula>ADCVD_Case__r.Name</formula>
        <label>ADCVD Case Number Text Value Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type_Text__c</fullName>
        <label>ADCVD Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type__c</fullName>
        <formula>TEXT(ADCVD_Case__r.ADCVD_Case_Type__c)</formula>
        <label>ADCVD Case Type Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Suspension Agreements</relationshipLabel>
        <relationshipName>Suspension_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anniversary_Month__c</fullName>
        <label>Anniversary Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBP_Case_Number_Text__c</fullName>
        <label>CBP Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number__c</fullName>
        <formula>ADCVD_Case__r.CBP_Case_Number__c</formula>
        <label>CBP Case Number Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Concat_Text_Values__c</fullName>
        <label>Case Concat Text Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commodity_Text__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Commodity__c)</formula>
        <label>Commodity Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(ADCVD_Case__r.Country__c)</formula>
        <label>Country Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Termination__c</fullName>
        <label>Effective Date of Termination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enforcement_Concerns__c</fullName>
        <label>Enforcement Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Suspension Agreements</relationshipLabel>
        <relationshipName>Suspension_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lotus_Notes_History_Data__c</fullName>
        <label>Lotus Notes History Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Sunset_Initiation_Date_UI__c</fullName>
        <formula>TEXT(YEAR(Next_Sunset_Initiation_Date__c)) &amp; &apos;/&apos; &amp;
 CASE(MONTH(Next_Sunset_Initiation_Date__c),
1, &apos;January&apos;, 
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,
&apos;Date Not Set&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Sunset Initiation Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Sunset_Initiation_Date__c</fullName>
        <label>Next Sunset Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notations_Amendments__c</fullName>
        <label>Notations/Amendments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SA</fullName>
                    <default>true</default>
                    <label>SA</label>
                </value>
                <value>
                    <fullName>Suspension Office</fullName>
                    <isActive>false</isActive>
                    <label>Suspension Office</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text_Value__c</fullName>
        <label>Product Short Name Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <formula>ADCVD_Case__r.Product_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Short Name Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text_Value__c</fullName>
        <label>Product Text Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>ADCVD_Case__r.Product__c</formula>
        <label>Product Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current - Active</fullName>
                    <default>true</default>
                    <label>Current - Active</label>
                </value>
                <value>
                    <fullName>Terminated - Other</fullName>
                </value>
                <value>
                    <fullName>Terminated - Sunset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspension_Date__c</fullName>
        <label>Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date - Deprecated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>This_Investigation_has_a_Susp_Agreement__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>This Investigation has a Susp. Agreement</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field displays the Type of Suspension Agreement</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD - 734(b) - Cessation of Exports</fullName>
                </value>
                <value>
                    <fullName>AD - 734(b) - Normal Value</fullName>
                </value>
                <value>
                    <fullName>AD - 734(c) - Reference Price</fullName>
                </value>
                <value>
                    <fullName>AD - 734(l) - NME</fullName>
                </value>
                <value>
                    <fullName>CVD - 704(b) - Elimination of Subsidy</fullName>
                </value>
                <value>
                    <fullName>CVD - 704(b) - Cessation of Exports</fullName>
                </value>
                <value>
                    <fullName>CVD - 704(c) - Other than Quantitative Restriction</fullName>
                </value>
                <value>
                    <fullName>CVD - 704(c) - Quantitative Restriction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Suspension Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Investigation__c</columns>
        <columns>ADCVD_Case_Number_Text__c</columns>
        <columns>ADCVD_Case_Type_Text__c</columns>
        <columns>Country_Text__c</columns>
        <columns>Product_Text__c</columns>
        <columns>Suspension_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Suspension_Agreements</fullName>
        <columns>NAME</columns>
        <columns>Investigation__c</columns>
        <columns>ADCVD_Case__c</columns>
        <columns>Country_Text__c</columns>
        <columns>ADCVD_Case_Type_Text__c</columns>
        <columns>Product_Text__c</columns>
        <columns>Suspension_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Current - Active</value>
        </filters>
        <label>All Active Suspension Agreements</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Suspension Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspension Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A1301PermSetReparentsSuspAgreement</fullName>
        <active>true</active>
        <description>Suspension Agreement records can only be reparented by members of ADCVD_App_Modify_Parents permission set.</description>
        <errorConditionFormula>AND(
            $Setup.Master_Automation__c.ValidationRulesEnabled__c == true,
            Locked__c == false,
            NOT( ISNEW() ),
            OR(
            ISCHANGED(ADCVD_Case__c),
            ISCHANGED(Investigation__c)
            ),
            NOT(
            $Permission.ADCVD_App_Modify_Parents
            )
            )</errorConditionFormula>
        <errorMessage>You are not authorized to edit ADCVD Case or Investigation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()),
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
</CustomObject>